--- a/muk_web_preview_vector/template/assets.xml
+++ b/muk_web_preview_vector/template/assets.xml
@@ -23,6 +23,7 @@
 	        <script type="text/javascript" src="/muk_web_preview_vector/static/lib/svg-pan-zoom/svg-pan-zoom.js"/>
 	        
 			<link rel="stylesheet" href="/muk_web_preview_vector/static/src/less/preview_content.less" />
+	        <script type="text/javascript" src="/muk_web_preview_vector/static/src/js/preview_handler.js"/>
 	        <script type="text/javascript" src="/muk_web_preview_vector/static/src/js/preview_generator.js"/>
 	    </xpath>
 	</template>
