--- a/muk_web_client_refresh/views/refresh_rule_view.xml
+++ b/muk_web_client_refresh/views/refresh_rule_view.xml
@@ -20,8 +20,8 @@
 <odoo>
 
 <record id="view_refresh_rule_tree" model="ir.ui.view">
-	<field name="name">muk_web_client_refresh_config_rule.tree</field>
-	<field name="model">muk_web_client_refresh_config.rule</field>
+	<field name="name">muk_web_client_refresh_rule.tree</field>
+	<field name="model">muk_web_client_refresh.rule</field>
 	<field name="arch" type="xml">
 		<tree string="Document Settings">
 			<field name="name" />
@@ -34,8 +34,8 @@
 </record>
 
 <record id="view_refresh_rule_form" model="ir.ui.view">
-	<field name="name">muk_web_client_refresh_config_rule.form</field>
-	<field name="model">muk_web_client_refresh_config.rule</field>
+	<field name="name">muk_web_client_refresh_rule.form</field>
+	<field name="model">muk_web_client_refresh.rule</field>
 	<field name="arch" type="xml">
 		<form string="Refresg Rule">
 			<sheet>
@@ -57,7 +57,7 @@
 
 <record id="action_refresh_rule" model="ir.actions.act_window">
 	<field name="name">Rules</field>
-	<field name="res_model">muk_web_client_refresh_config.rule</field>
+	<field name="res_model">muk_web_client_refresh.rule</field>
 	<field name="view_mode">tree,form</field>
 </record>
 
