--- a/muk_web_preview_mail/static/src/less/preview_content.less
+++ b/muk_web_preview_mail/static/src/less/preview_content.less
@@ -108,6 +108,7 @@
 	
 			.tab-line > .nav-tabs > li.active > a {
 				border: 0;
+				background: none ! important;
 				color: @gray-dark;
 			}
 	
