update lazy load web_preview

--- a/muk_web_preview/static/src/less/preview_content.less
+++ b/muk_web_preview/static/src/less/preview_content.less
@@ -20,6 +20,7 @@
 .o_preview_viewerjs,
 .o_preview_viewerjs iframe {
 	position: absolute;
+	display: block;
 	width: 100%;
 	height: 100%;
 }
@@ -27,6 +28,7 @@
 .o_preview_pdfjs,
 .o_preview_pdfjs iframe {
 	position: absolute;
+	display: block;
 	width: 100%;
 	height: 100%;
 }    
