--- a/muk_web_preview/static/src/less/preview_dialog.less
+++ b/muk_web_preview/static/src/less/preview_dialog.less
@@ -79,7 +79,12 @@ button.preview-minimize {
 
 .preview-body {
 	padding: 0;
+	position: relative;
 	min-height: 420px;
+}
+
+.preview-footer {
+	padding: 10px;
 }
 
 
