--- a/muk_web_preview_attachment/views/ir_attachment_view.xml
+++ b/muk_web_preview_attachment/views/ir_attachment_view.xml
@@ -36,11 +36,9 @@
     <field name="inherit_id" ref="mail.view_document_file_kanban"/>
     <field name="arch" type="xml">
         <xpath expr="//div[@class='o_image']" position="attributes">
-        	 <attribute name="t-att-data-id">record.id.value</attribute>
+        	 <attribute name="t-att-data-id">record.id.raw_value</attribute>
         </xpath>
     </field>
 </record>
-
-
 
 </odoo>
