--- a/muk_web_preview_csv/template/assets.xml
+++ b/muk_web_preview_csv/template/assets.xml
@@ -19,17 +19,11 @@
 
 <odoo>
 	<template id="assets_backend" inherit_id="web.assets_backend">
-	    <xpath expr=".">	        
-	        <script type="text/javascript" src="/muk_web_preview_csv/static/lib/PapaParse/papaparse.js"/>
-	        
-	        <script type="text/javascript" src="/muk_web_preview_csv/static/lib/numbro/numbro.js"/>
-			<link rel="stylesheet" href="/muk_web_preview_csv/static/lib/pikaday/pikaday.css" />
-	        <script type="text/javascript" src="/muk_web_preview_csv/static/lib/pikaday/pikaday.js"/>
-	        <link rel="stylesheet" href="/muk_web_preview_csv/static/lib/handsontable/handsontable.css" />
-	        <script type="text/javascript" src="/muk_web_preview_csv/static/lib/handsontable/handsontable.js"/>
-	        
+	    <xpath expr="//link[last()]" position="after">
 			<link rel="stylesheet" href="/muk_web_preview_csv/static/src/less/preview_content.less" />
-	        <script type="text/javascript" src="/muk_web_preview_csv/static/src/js/preview_handler.js"/>
+		</xpath>
+		<xpath expr="//script[last()]" position="after">
+			<script type="text/javascript" src="/muk_web_preview_csv/static/src/js/preview_handler.js"/>
 	        <script type="text/javascript" src="/muk_web_preview_csv/static/src/js/preview_generator.js"/>
 	    </xpath>
 	</template>
