--- a/muk_web_preview_msoffice/template/assets.xml
+++ b/muk_web_preview_msoffice/template/assets.xml
@@ -19,16 +19,12 @@
 
 <odoo>
 	<template id="assets_backend" inherit_id="web.assets_backend">
-	    <xpath expr=".">	        
-	        <script type="text/javascript" src="/muk_web_preview_msoffice/static/lib/jQueryBinaryTransport/jquery-binarytransport.js"/>
-	        <script type="text/javascript" src="/muk_web_preview_msoffice/static/lib/SheetJS/xlsx.js"/>
-	        
-			<link rel="stylesheet" href="/muk_web_preview_msoffice/static/lib/handsontable/handsontable.css" />
-	        <script type="text/javascript" src="/muk_web_preview_msoffice/static/lib/handsontable/handsontable.js"/>
-	        
+	    <xpath expr="//link[last()]" position="after">
 			<link rel="stylesheet" href="/muk_web_preview_msoffice/static/src/less/preview_content.less" />
-	        <script type="text/javascript" src="/muk_web_preview_msoffice/static/src/js/preview_handler.js"/>
+		</xpath>
+		<xpath expr="//script[last()]" position="after">
+			<script type="text/javascript" src="/muk_web_preview_msoffice/static/src/js/preview_handler.js"/>
 	        <script type="text/javascript" src="/muk_web_preview_msoffice/static/src/js/preview_generator.js"/>
-	    </xpath>
+		</xpath>
 	</template>
 </odoo>
