--- a/muk_web_preview/template/assets.xml
+++ b/muk_web_preview/template/assets.xml
@@ -29,13 +29,12 @@
 	        <script type="text/javascript" src="/muk_web_preview/static/src/js/preview_generator.js"/>
 	        <script type="text/javascript" src="/muk_web_preview/static/src/js/preview_widgets.js"/>
 	        <script type="text/javascript" src="/muk_web_preview/static/src/js/preview_dialog.js"/>
-			<script type="text/javascript" src="/muk_web_preview/static/test/test.js"/>
 		</xpath>
 	</template>
 	
-<!-- 	<template id="assets_test" inherit_id="web.js_tests_assets"> -->
-<!-- 		<xpath expr="//script[last()]" position="after"> -->
-<!-- 			<script type="text/javascript" src="/muk_web_preview/static/test/test.js"/> -->
-<!-- 		</xpath> -->
-<!-- 	</template> -->
+	<template id="assets_test" inherit_id="web.js_tests_assets">
+		<xpath expr="//script[last()]" position="after">
+			<script type="text/javascript" src="/muk_web_preview/static/test/test.js"/>
+		</xpath>
+	</template>
 </odoo>
