--- a/muk_web_utils/template/assets.xml
+++ b/muk_web_utils/template/assets.xml
@@ -18,6 +18,15 @@
 -->
 
 <odoo>
+	<template id="assets_common" inherit_id="web.assets_common">
+		<xpath expr="//link[last()]" position="after">
+			<link rel="stylesheet" href="/muk_web_utils/static/lib/bootstrap-switch/css/bootstrap-switch.css" />
+		</xpath>
+		<xpath expr="//script[last()]" position="after">
+			<script type="text/javascript" src="/muk_web_utils/static/lib/bootstrap-switch/js/bootstrap-switch.js"/>
+		</xpath>
+	</template>
+
 	<template id="assets_backend" inherit_id="web.assets_backend">
 		<xpath expr="//script[last()]" position="after">
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/jquery.js"/>
