--- a/muk_web_client/views/res_config_settings_view.xml
+++ b/muk_web_client/views/res_config_settings_view.xml
@@ -41,6 +41,20 @@
 	                        </div>
 	                    </div>
 	                </div>
+	                <div class="col-xs-12 col-md-6 o_setting_box">
+	                    <div class="o_setting_left_pane">
+	                        <field name="module_muk_web_client_notification" />
+	                    </div>
+	                    <div class="o_setting_right_pane">
+	                        <label string="Notifications" for="module_muk_web_client_notification"/>
+	                        <div class="text-muted">
+	                            Send instant messages to users in real time
+	                        </div>
+	                        <div class="content-group" attrs="{'invisible': [('module_muk_web_client_notification','=',False)]}" id="msg_module_muk_web_client_notification">
+	                            <div class="text-warning mt16"><strong>Save</strong> this page and come back here to set up the feature.</div>
+	                        </div>
+	                    </div>
+	                </div>
 	            </div>
 	        </div>
 	    </field>
