--- a/muk_web_preview_rst/static/src/less/preview_content.less
+++ b/muk_web_preview_rst/static/src/less/preview_content.less
@@ -17,13 +17,13 @@
 *
 **********************************************************************************/
 
-.o_preview_markdown {
+.o_preview_rst {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	overflow: auto;
 	
-	.markdown-container {
+	.rst-container {
 		display: none;
 		padding: 5px 10px;
 	}
