--- a/muk_web_utils/template/assets.xml
+++ b/muk_web_utils/template/assets.xml
@@ -25,6 +25,7 @@
 		</xpath>
 		<xpath expr="//script[last()]" position="after">
 			<script type="text/javascript" src="/muk_web_utils/static/lib/spectrum/js/spectrum.js"/>
+			<script type="text/javascript" src="/muk_web_utils/static/lib/bootbox/bootbox.js"/>
 			<script type="text/javascript" src="/muk_web_utils/static/lib/bootstrap-switch/js/bootstrap-switch.js"/>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/jquery.js"/>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/common.js"/>
