--- a/muk_web_utils/template/assets.xml
+++ b/muk_web_utils/template/assets.xml
@@ -21,14 +21,12 @@
 	<template id="assets_common" inherit_id="web.assets_common">
 		<xpath expr="//link[last()]" position="after">
 			<link rel="stylesheet" href="/muk_web_utils/static/lib/spectrum/css/spectrum.css" />
-			<link rel="stylesheet" href="/muk_web_utils/static/lib/bootstrap-switch/css/bootstrap-switch.css" />
 		</xpath>
 		<xpath expr="//script[last()]" position="after">
 			<script type="text/javascript" src="/muk_web_utils/static/lib/spectrum/js/spectrum.js"/>
-			<script type="text/javascript" src="/muk_web_utils/static/lib/bootbox/bootbox.js"/>
-			<script type="text/javascript" src="/muk_web_utils/static/lib/bootstrap-switch/js/bootstrap-switch.js"/>
-			<script type="text/javascript" src="/muk_web_utils/static/src/js/jquery.js"/>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/common.js"/>
+			<script type="text/javascript" src="/muk_web_utils/static/src/js/jquery.js"/>
+			<script type="text/javascript" src="/muk_web_utils/static/src/js/files.js"/>
 		</xpath>
 	</template>
 	
@@ -42,7 +40,13 @@
 	</template>
 
 	<template id="assets_backend" inherit_id="web.assets_backend">
+		<xpath expr="//link[last()]" position="after">
+			<link rel="stylesheet" href="/muk_web_utils/static/lib/bootstrap-switch/css/bootstrap-switch.css" />
+		</xpath>
 		<xpath expr="//script[last()]" position="after">
+			<script type="text/javascript" src="/muk_web_utils/static/lib/bootstrap-switch/js/bootstrap-switch.js"/>
+			<script type="text/javascript" src="/muk_web_utils/static/lib/bootstrap-notify/bootstrap-notify.js"/>
+			<script type="text/javascript" src="/muk_web_utils/static/lib/bootbox/bootbox.js"/>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/mimetype.js"/>
 		</xpath>
 	</template>
