--- a/muk_web_utils/template/assets.xml
+++ b/muk_web_utils/template/assets.xml
@@ -26,6 +26,7 @@
 			<script type="text/javascript" src="/muk_web_utils/static/lib/spectrum/js/spectrum.js"/>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/common.js"/>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/jquery.js"/>
+			<script type="text/javascript" src="/muk_web_utils/static/src/js/underscore.js"/>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/files.js"/>
 		</xpath>
 	</template>
@@ -48,6 +49,7 @@
 			<script type="text/javascript" src="/muk_web_utils/static/lib/bootstrap-notify/bootstrap-notify.js"/>
 			<script type="text/javascript" src="/muk_web_utils/static/lib/bootbox/bootbox.js"/>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/mimetype.js"/>
+			<script type="text/javascript" src="/muk_web_utils/static/src/js/widgets.js"/>
 		</xpath>
 	</template>
 	
