publish muk_web_export_attachment - 11.0.1.1.2

--- a/muk_web_export_attachment/static/src/less/sidebar_export.less
+++ b/muk_web_export_attachment/static/src/less/sidebar_export.less
@@ -20,6 +20,7 @@
 .o_cp_sidebar {
 	.o_sidebar_export_attachment {
 	    right: -18px;
+	    top: 1px;
 	    position: relative;
 	    font-size: 15px;
 	}
