--- a/muk_web_client/views/res_config_settings_view.xml
+++ b/muk_web_client/views/res_config_settings_view.xml
@@ -27,7 +27,7 @@
 	        <div name="multi_company" position="after">
 	            <h2>Web Client</h2>
 	            <div class="row mt16 o_settings_container" name="web_client">
-	                <div class="col-xs-12 col-md-6 o_setting_box">
+	                <div class="col-12 col-lg-6 o_setting_box">
 	                    <div class="o_setting_left_pane">
 	                        <field name="module_muk_web_client_refresh" />
 	                    </div>
@@ -41,7 +41,7 @@
 	                        </div>
 	                    </div>
 	                </div>
-	                <div class="col-xs-12 col-md-6 o_setting_box">
+	                <div class="col-12 col-lg-6 o_setting_box">
 	                    <div class="o_setting_left_pane">
 	                        <field name="module_muk_web_client_notification" />
 	                    </div>
