--- a/muk_web_utils/template/assets.xml
+++ b/muk_web_utils/template/assets.xml
@@ -18,29 +18,14 @@
 -->
 
 <odoo>
-	<template id="assets_common" name="Common Assets" inherit_id="web.assets_common">
-		<xpath expr="//link[last()]" position="after">
-		</xpath>
-		<xpath expr="//script[last()]" position="after">
-		</xpath>
-	</template>
-	
-	<template id="assets_editor" name="Editor Assets" inherit_id="web_editor.assets_editor">
-		<xpath expr="//link[last()]" position="after">
-		</xpath>
-		<xpath expr="//script[last()]" position="after">
-		</xpath>
-	</template>
 
 	<template id="assets_backend" name="Backend Assets" inherit_id="web.assets_backend">
 		<xpath expr="//link[last()]" position="after">
+			<link rel="stylesheet" type="text/scss" href="/muk_web_utils/static/src/scss/variables.scss" />
+			<link rel="stylesheet" type="text/scss" href="/muk_web_utils/static/src/scss/switch.scss" />
 		</xpath>
 		<xpath expr="//script[last()]" position="after">
 		</xpath>
 	</template>
 	
-	<template id="qunit_suite" name="Qunit Assets" inherit_id="web.qunit_suite">
-		<xpath expr="//script[last()]" position="after">
-		</xpath>
-	</template>
 </odoo>
