--- a/muk_web_utils/template/assets.xml
+++ b/muk_web_utils/template/assets.xml
@@ -38,7 +38,9 @@
 			<link rel="stylesheet" type="text/scss" href="/muk_web_utils/static/src/scss/share.scss" />
 		</xpath>
 		<xpath expr="//script[last()]" position="after">
+			<script type="text/javascript" src="/muk_web_utils/static/src/js/libs/jquery.js"></script>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/core/utils.js"></script>
+			<script type="text/javascript" src="/muk_web_utils/static/src/js/core/dropzone.js"></script>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/module.js"></script>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/copy.js"></script>
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/share.js"></script>
