publish muk_web_utils - 12.0

--- a/muk_web_utils/static/src/scss/dropzone.scss
+++ b/muk_web_utils/static/src/scss/dropzone.scss
@@ -54,7 +54,7 @@
 		&:after {
 			padding-top: 18rem;
 			font-size: 3rem;
-		    content: "Drop files here to upload!";
+		    content: attr(data-dropzone-text);
 		}
 	}
 }
