publish muk_web_utils - 12.0

--- a/muk_web_utils/static/src/scss/dropzone.scss
+++ b/muk_web_utils/static/src/scss/dropzone.scss
@@ -18,6 +18,7 @@
 **********************************************************************************/
 
 .mk_dropzone {
+	position: relative;
 	&:before {
 		display:flex;
 		z-index: 1052;
