publish muk_web_utils - 12.0

--- a/muk_web_utils/static/src/scss/image.scss
+++ b/muk_web_utils/static/src/scss/image.scss
@@ -64,4 +64,12 @@
         margin-bottom: 10px;
         border: none;
     }
+   	@include media-breakpoint-down(xs, $o-extra-grid-breakpoints) {
+		.mk_form_image_controls{
+		    position: initial;
+		    > .fa{
+		        background: $o-brand-secondary;
+		    }
+		}
+	}
 }
