--- a/muk_web_utils/static/src/scss/image.scss
+++ b/muk_web_utils/static/src/scss/image.scss
@@ -18,6 +18,11 @@
 **********************************************************************************/
 	
 .o_field_widget.o_field_image {
+	@include media-breakpoint-up(sm, $o-extra-grid-breakpoints) {
+		.mk_form_image_wrapper {
+			min-height: 60px;
+		}
+	}
 	.mk_form_image_controls {
 		@include o-position-absolute($left: 0, $bottom: 0);
         width: 100%;
