--- a/muk_web_theme/static/src/scss/variables.scss
+++ b/muk_web_theme/static/src/scss/variables.scss
@@ -44,3 +44,9 @@ $font-family-sans-serif: 'Roboto';
 
 $mk-sidebar-large-width: 146px;
 $mk-sidebar-small-width: 46px;
+
+//----------------------------------------------------------
+// Chatter
+//----------------------------------------------------------
+
+$mk-chatter-width: 550px;
