--- a/muk_web_theme/static/src/scss/variables.scss
+++ b/muk_web_theme/static/src/scss/variables.scss
@@ -46,7 +46,9 @@ $mk-sidebar-large-width: 146px;
 $mk-sidebar-small-width: 46px;
 
 //----------------------------------------------------------
-// Chatter
+// Sided Chatter
 //----------------------------------------------------------
 
-$mk-chatter-width: 550px;
+$mk-form-min-width: 835px;
+$mk-chatter-min-width: 550px;
+$mk-chatter-max-width: 600px;
