publish muk_web_theme - 12.0

--- a/muk_web_theme/static/src/scss/list_view.scss
+++ b/muk_web_theme/static/src/scss/list_view.scss
@@ -17,6 +17,10 @@
 *
 **********************************************************************************/
 
+.o_list_view.table {
+	overflow: hidden;
+}
+
 .o_list_view.table,
 .o_list_view.table thead,
 .o_list_view.table tfoot,
