publish muk_web_theme - 12.0

--- a/muk_web_theme/views/res_config_settings_view.xml
+++ b/muk_web_theme/views/res_config_settings_view.xml
@@ -25,8 +25,8 @@
 	    <field name="inherit_id" ref="base_setup.res_config_settings_view_form"/>
 	    <field name="arch" type="xml">
 	        <div id="business_documents" position="after">
-	            <h2>Backend Theme</h2>
-	            <div class="row mt16 o_settings_container" name="web_client">
+	            <h2 id="web_theme_title">Backend Theme</h2>
+	            <div class="row mt16 o_settings_container" name="web_theme">
 	                <div class="col-12 col-lg-6 o_setting_box">
 	                    <div class="o_setting_left_pane">
 	                    </div>
