publish muk_web_theme - 12.0

--- a/muk_web_theme/static/src/scss/appsbar.scss
+++ b/muk_web_theme/static/src/scss/appsbar.scss
@@ -22,7 +22,7 @@
 	position: fixed; 
     overflow-y: auto;	
     top: $o-navbar-height;
-    background-color: $black;
+    background-color: $mk-appbar-background;
     .mk_apps_sidebar {
 	    padding: 0;
 	    white-space: nowrap;
