--- a/muk_web_theme/static/src/scss/colors.scss
+++ b/muk_web_theme/static/src/scss/colors.scss
@@ -24,6 +24,8 @@
 $o-brand-odoo: #243742;
 $o-brand-primary: #5D8DA8;
 
+$mk-appbar-background: #000000;
+
 $mk-brand-gradient-start: lighten($o-brand-odoo, 10%);
 $mk-brand-gradient-end: lighten($o-brand-odoo, 20%);
 
