publish muk_web_utils - 12.0

--- a/muk_web_utils/static/src/scss/image.scss
+++ b/muk_web_utils/static/src/scss/image.scss
@@ -21,6 +21,7 @@
 	@include media-breakpoint-up(sm, $o-extra-grid-breakpoints) {
 		.mk_form_image_wrapper {
 			min-height: 60px;
+			min-width: 80px;
 		}
 	}
 	.mk_form_image_controls {
