--- a/muk_web_utils/static/src/scss/color.scss
+++ b/muk_web_utils/static/src/scss/color.scss
@@ -40,3 +40,24 @@
     	line-height: 1.42rem;
     }
 }
+
+span.mk_field_color_index {
+	@for $size from 1 through length($o-colors) {
+        &.mk_color_index_#{$size - 1} {
+            color: nth($o-colors, $size);
+        }
+    }
+}
+
+select.mk_field_color_index {
+	&.mk_color_index_0, .mk_color_index_0 {
+		background-color: $white ! important;
+    	color: nth($o-colors, 1) ! important;
+	}
+	@for $size from 2 through length($o-colors) {
+        &.mk_color_index_#{$size - 1}, .mk_color_index_#{$size - 1} {
+            background-color: nth($o-colors, $size) ! important;
+			color: $white ! important;
+        }
+    }
+}
