--- a/muk_web_utils/template/assets.xml
+++ b/muk_web_utils/template/assets.xml
@@ -44,6 +44,7 @@
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/copy.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/share.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/path.js" />
+			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/binary.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/module.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/views/form/renderer.js" />
 		</xpath>
