--- a/muk_web_theme/static/src/scss/form_view.scss
+++ b/muk_web_theme/static/src/scss/form_view.scss
@@ -22,6 +22,7 @@
         background: $o-webclient-background-color;
         border-bottom: 1px solid gray('300');
         > .o_form_sheet {
+        	@include mk-container-widths();
          	background-color: $o-view-background-color;
             border: 1px solid gray('400');
             box-shadow: 0 5px 20px -15px black;
